// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Toast /> should call the onMount function if given one 1`] = `
<div
  className="ToastClass alert"
>
  <IntelliIcon
    className="toast-icon"
    icon="alert"
    size="xsmall"
  />
  <div
    className="toast-content no-heading"
  >
    <Text
      isInline={true}
      tag="span"
      type="body"
      weight={600}
    />
    <div>
      Yahallo!
    </div>
  </div>
  <span
    className="fa-container toast-close-span"
    onClick={[Function]}
  >
    <IntelliIcon
      className="toast-close"
      icon="cross-small"
      size="xsmall"
    />
  </span>
</div>
`;

exports[`<Toast /> should render a toast of a default type, which is success 1`] = `
<div
  className="ToastClass success"
>
  <IntelliIcon
    className="toast-icon"
    icon="check"
    size="xsmall"
  />
  <div
    className="toast-content no-heading"
  >
    <Text
      isInline={true}
      tag="span"
      type="body"
      weight={600}
    />
    <div>
      Yo ... whaazzzaaaap!!!
    </div>
  </div>
  <span
    className="fa-container toast-close-span"
    onClick={[Function]}
  >
    <IntelliIcon
      className="toast-close"
      icon="cross-small"
      size="xsmall"
    />
  </span>
</div>
`;

exports[`<Toast /> should render an alert toast 1`] = `
<div
  className="ToastClass alert"
>
  <IntelliIcon
    className="toast-icon"
    icon="alert"
    size="xsmall"
  />
  <div
    className="toast-content no-heading"
  >
    <Text
      isInline={true}
      tag="span"
      type="body"
      weight={600}
    />
    <div>
      Surprise @#$%^&*!!!
    </div>
  </div>
  <span
    className="fa-container toast-close-span"
    onClick={[Function]}
  >
    <IntelliIcon
      className="toast-close"
      icon="cross-small"
      size="xsmall"
    />
  </span>
</div>
`;
